scss/_patterns_navigation.scss
@import 'settings';

$nav-border-bottom-thickness: 1px;

// Default header styling
@mixin vf-p-navigation {
  @include vf-navigation-default;
  @include vf-navigation-sidebar;
}

@mixin vf-navigation-default {
  .p-navigation {
    @include vf-navigation-pattern(
      $background-color: $color-navigation-background,
      $border-color: if(lightness($color-navigation-background) > 50, $color-mid-light, transparent),
      $text-color: if(lightness($color-navigation-background) > 70, $color-dark, $color-light)
    );
  }
}

@mixin vf-navigation-sidebar {
  .p-navigation--sidebar {
    @include vf-navigation-pattern($background-color: $color-x-light, $border-color: $color-mid-light, $text-color: $color-dark);

    flex-direction: column;
    height: auto;

    .p-navigation__banner .row {
      flex-direction: row;
    }

    .sidebar__cta {
      margin-top: 0;

      .p-inline-list {
        display: inline-block;
      }

      [class^='p-icon'] {
        cursor: pointer;
      }

      @media (min-width: $breakpoint-navigation-threshold + 1) {
        display: none;
      }
    }

    .sidebar__content {
      background: $color-x-light;
      width: 100%;

      @media (min-width: $breakpoint-navigation-threshold + 1) {
        display: block !important; // important to override u-hide util
      }
    }

    .sidebar__link {
      @extend %single-border-text-vpadding--scaling;
      color: $color-dark;
      display: block;
      position: relative;

      &:hover {
        color: $color-link;
      }

      &:focus {
        outline: 0;
      }
    }

    & .p-navigation__logo {
      @extend %vf-heading-3;
      display: flex;
      flex: 0 0 auto;
      margin-left: 0;

      .p-navigation__image {
        height: 24px;
        width: auto;
      }
    }

    & .p-navigation__tagline {
      @extend %default-text;
      display: block;
    }

    .is-selected {
      font-weight: bold;
    }

    .sidebar__first-level {
      padding-left: 0;
    }

    .sidebar__third-level {
      background-color: $color-mid-dark;
      margin-right: -4rem;
      padding-left: 4rem;
      position: relative;
      right: 3rem;
    }

    .sidebar__second-level,
    .sidebar__third-level {
      display: none;
      list-style: none;
      margin-left: 0;
      padding-bottom: $sp-x-small;
      padding-top: $sp-x-small;

      .is-deepest-level {
        background-color: $color-light;
      }
    }

    .p-icon--plus,
    .p-icon--minus {
      perspective: 800px;
      perspective-origin: 50% 100px;
      position: absolute;
      right: $sp-medium;
      top: $sp-small;
      transition: all 0.5s ease-in-out; // sass-lint:disable-line no-transition-all
    }

    .p-icon--minus {
      display: none;
    }

    .is-selected {
      .p-icon--minus {
        display: block;
      }

      .p-icon--plus {
        display: none;
      }
    }

    .is-selected + {
      .sidebar__second-level,
      .sidebar__third-level {
        display: block;
      }
    }
  }
}

@mixin vf-navigation-pattern($background-color, $border-color: $color-x-light, $text-color: $color-x-dark) {
  background-color: $background-color;
  display: flex;
  flex-shrink: 0;
  position: relative;
  z-index: 10;

  @media (max-width: $breakpoint-navigation-threshold) {
    flex-direction: column;
  }

  a,
  a:visited,
  a:focus {
    color: $text-color;
    text-decoration: none;
  }

  a:hover {
    color: $color-navigation-selected;
    text-decoration: none;
  }

  // line under menu
  &::after {
    background: $border-color;
    bottom: 0;
    content: '';
    height: $nav-border-bottom-thickness;
    left: 0;
    position: absolute;
    right: 0;
  }

  &__banner {
    display: flex;
    flex: 0 0 auto;
    justify-content: space-between;
  }

  &__image {
    align-self: center;
    max-height: 2rem;
    min-height: 1.5rem;
  }

  &__link {
    & > a {
      display: block;
      margin-bottom: 0;
      position: relative;

      @media (max-width: $breakpoint-navigation-threshold) {
        padding: $spv-inner--large $grid-margin-width;

        &::before {
          background: $color-light;
          content: '';
          height: $nav-border-bottom-thickness;
          left: 0;
          position: absolute;
          right: 0;
          top: 0;
        }
      }

      @media (min-width: $breakpoint-navigation-threshold + 1) {
        padding: $spv-inner--large $sph-inner;

        &::before {
          background: $border-color;
          bottom: 0;
          content: '';
          height: $nav-border-bottom-thickness;
          left: 0;
          position: absolute;
          right: 0;
        }
      }

      &:hover {
        color: $color-navigation-selected;
      }
    }

    @media (max-width: $breakpoint-navigation-threshold) {
      &:first-child > a::before {
        background: $border-color;
      }
    }

    &.is-selected > a {
      color: $color-navigation-selected;
    }
  }

  &__links {
    list-style: none;
    margin: 0;
    padding: 0;
    @media (max-width: $breakpoint-navigation-threshold) {
      margin-top: -1px; // prevents bottom border of nav from moving 1px
    }
    @media (min-width: $breakpoint-navigation-threshold + 1) {
      display: flex;
      flex-wrap: wrap;
    }
  }

  &__logo {
    display: flex;
    flex: 0 0 auto;
    height: 3rem;
    margin: 0 $sph-inner 0 $grid-margin-width;

    .p-navigation__link {
      display: flex;
    }
  }

  &__nav {
    display: none;

    @media (max-width: $breakpoint-navigation-threshold) {
      flex-direction: column;
    }

    @media (min-width: $breakpoint-navigation-threshold + 1) {
      display: flex;
      justify-content: space-between;
      width: 100%;
    }
  }

  .p-search-box {
    min-width: 10em;

    @media (max-width: $breakpoint-navigation-threshold) {
      flex: 1 0 auto;
      margin: -1px $grid-margin-width $spv-inner--small $grid-margin-width;
      order: -1;
    }

    @media (min-width: $breakpoint-navigation-threshold + 1) {
      // align baselines of menu items and input text
      $input-gap-top: $spv-inner--large - $spv-nudge;
      display: flex;
      flex: 1 1 auto;
      margin: $input-gap-top $sph-inner auto auto;
      max-width: 20rem;
      order: 1;
    }
  }

  &__row,
  & .row {
    display: flex;
    padding-left: 0;
    padding-right: 0;
    width: 100%;

    @media (max-width: $breakpoint-navigation-threshold) {
      flex-direction: column;
    }
  }

  &:target {
    &::after {
      display: none;
    }

    .p-navigation__nav {
      display: flex;
    }

    .p-navigation__toggle--open {
      display: none;
    }

    .p-navigation__toggle--close {
      @media (max-width: $breakpoint-navigation-threshold) {
        display: block;
      }
    }
  }

  &__toggle {
    &--open,
    &--close {
      display: none;
      margin: 0 $grid-margin-width auto $sph-inner;
      padding: $spv-inner--large 0;
    }

    &--open {
      @media (max-width: $breakpoint-navigation-threshold) {
        display: block;
      }
    }
  }

  .u-image-position .u-image-position--right {
    order: 2; // ensure it is to the right of search
    // XXX: patch - override utility, as it positions absolutely, which leads to overlap on smaller screens.
    // Should use flex instead; But that will require changing the markup
    position: relative;
    right: unset;
  }
}

